[package]
name = "influencer"
description = "OBS WebSocket client library"
keywords = ["obs", "remote-control", "obs-websocket"]
categories = ["web-programming::websocket"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
base64ct = { version = "1.8.0", features = ["alloc"] }
sha2 = "0.10.9"
thiserror = "2.0.12"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tungstenite.workspace = true

futures = { version = "0.3.31", optional = true }

[dependencies.tokio]
version = "1.46.1"
optional = true
features = ["rt", "net", "time", "sync"]

[dependencies.async-tungstenite]
version = "0.30.0"
optional = true
features = ["tokio-runtime"]

[features]
example_async = ["dep:async-tungstenite", "dep:tokio", "dep:futures"]
